--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,8 @@
             </form>
 
             <div class="d-flex justify-content-center">
-              <a
-                href="contact.html"
+              <button
+                type="submit"
                 class="
                   btn btn-lg btn-outline-dark
                   text-center
@@ -182,8 +182,9 @@
                   button
                 "
                 onclick="document.getElementById('contact-form').submit();"
-                >Send</a
               >
+                Send
+              </button>
             </div>
             <div class="status"></div>
           </div>
