--- a/purpose.html
+++ b/purpose.html
@@ -128,16 +128,16 @@
               influencing behaviors in order to have a good impact on the
               community.
             </p>
-            <ul class="list-group list-group-flush m-5">
-              <li class="list-group-item ml-5 p-2">
+            <ul class="list-group list-group-flush text-align">
+              <li class="list-group-item ml-3 p-2 text-center">
                 We carry out our objective by combining our extensive expertise
                 and experience to provide our clients with only the finest.
               </li>
-              <li class="list-group-item ml-5 p-2">
+              <li class="list-group-item ml-3 p-2 text-center">
                 We are dedicated to building long-term, fulfilling partnerships
                 with our clients that provide genuine value.
               </li>
-              <li class="list-group-item ml-5 p-2">
+              <li class="list-group-item ml-3 p-2 text-center">
                 We are committed to assisting our clients in generating new
                 ideas and bringing about change.
               </li>
