--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           possible.
         </p>
 
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mx-2">
           <a
             href="expertise.html"
             class="
