--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         "
       >
         <div class="navbar-brand" href="#">
-          <a class="logo-link" href="index.html">3GL</a>
+          <a class="logo-link" href="index.html">ƎGL</a>
         </div>
         <button
           class="navbar-toggler custom-toggler mr-2"
@@ -58,16 +58,16 @@
         <div class="collapse navbar-collapse" id="navLinks">
           <ul class="navbar-nav ml-auto mr-2">
             <li class="nav-item active mr-2">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">about</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="expertise.html">Expertise</a>
+              <a class="nav-link" href="expertise.html">expertise</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="purpose.html">Purpose and Values</a>
+              <a class="nav-link" href="purpose.html">purpose and values</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -75,10 +75,12 @@
     </header>
 
     <!-- About Information -->
-    <main class="mt-2">
-      <section class="presentation">
-        <div class="cover mt-auto">
-          <img src="./img/company.jpeg" alt="company" />
+    <main class="mt-2 pb-5">
+      <section class="presentation mt-5">
+        <div class="cover-container bg-white p-2">
+          <div class="cover">
+            <img src="./img/company.jpeg" alt="company" />
+          </div>
         </div>
         <div class="abt-title my-4 px-1">
           <h2 class="display-5">ABOUT THE 3GL CORPORATION</h2>
