--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <body class="bg-light">
     <!-- Navbar -->
-    <header>
+    <header style="height: 0">
       <nav
         class="
           navbar navbar-light navbar-expand-lg
@@ -45,7 +45,7 @@
         "
       >
         <div class="navbar-brand" href="#">
-          <a class="logo-link" href="index.html">3GL</a>
+          <a class="logo-link" href="index.html">ƎGL</a>
         </div>
         <button
           class="navbar-toggler custom-toggler mr-2"
@@ -58,16 +58,16 @@
         <div class="collapse navbar-collapse" id="navLinks">
           <ul class="navbar-nav ml-auto mr-2">
             <li class="nav-item mr-2">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">about</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="expertise.html">Expertise</a>
+              <a class="nav-link" href="expertise.html">expertise</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="purpose.html">Purpose and Values</a>
+              <a class="nav-link" href="purpose.html">purpose and values</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">contact</a>
             </li>
           </ul>
         </div>
@@ -75,9 +75,9 @@
     </header>
 
     <!-- Introduction -->
-    <main class="mt-1 intro">
-      <section class="mb-3">
-        <div class="intro-cover pt-2">
+    <main class="intro">
+      <section class="">
+        <div class="intro-cover">
           <img src="./img/chicago.jpeg" alt="chicago" />
         </div>
         <div class="abt-title py-2 px-1">
@@ -110,22 +110,18 @@
         </div>
       </section>
     </main>
+    <br />
+    <hr class="solid w-50 mx-auto mt-4" />
 
-    <section class="mt-5 p-3">
+    <section class="mt-5 p-3 mb-5">
       <div class="sub-content abt-title">
         <h2 class="display-4">Inventive Excellence Vision</h2>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center mb-5">
         <a
-          href="purpose.html"
-          class="
-            btn btn-lg btn-outline-dark
-            text-center
-            my-4
-            font-weight-bold
-            button
-          "
-          >LEARN MORE</a
+          href="contact.html"
+          class="btn btn-lg btn-dark text-center my-4 font-weight-bold button"
+          >contact our team</a
         >
       </div>
     </section>
