--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         "
       >
         <div class="navbar-brand" href="#">
-          <a class="logo-link" href="index.html">3GL</a>
+          <a class="logo-link" href="index.html">ƎGL</a>
         </div>
         <button
           class="navbar-toggler custom-toggler mr-2"
@@ -73,16 +73,16 @@
         <div class="collapse navbar-collapse" id="navLinks">
           <ul class="navbar-nav ml-auto mr-2">
             <li class="nav-item mr-2">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">about</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="expertise.html">Expertise</a>
+              <a class="nav-link" href="expertise.html">expertise</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="purpose.html">Purpose and Values</a>
+              <a class="nav-link" href="purpose.html">purpose and values</a>
             </li>
             <li class="nav-item active mr-2">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">contact</a>
             </li>
           </ul>
         </div>
