--- a/expertise.html
+++ b/expertise.html
@@ -45,7 +45,7 @@
         "
       >
         <div class="navbar-brand" href="#">
-          <a class="logo-link" href="index.html">3GL</a>
+          <a class="logo-link" href="index.html">ƎGL</a>
         </div>
         <button
           class="navbar-toggler custom-toggler mr-2"
@@ -58,23 +58,23 @@
         <div class="collapse navbar-collapse" id="navLinks">
           <ul class="navbar-nav ml-auto mr-2">
             <li class="nav-item mr-2">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html">about</a>
             </li>
             <li class="nav-item active mr-2">
-              <a class="nav-link" href="expertise.html">Expertise</a>
+              <a class="nav-link" href="expertise.html">expertise</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="purpose.html">Purpose and Values</a>
+              <a class="nav-link" href="purpose.html">purpose and values</a>
             </li>
             <li class="nav-item mr-2">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">contact</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <main class="mt-5">
+    <main class="mt-5 pb-5">
       <h2 class="title text-center mb-5">Expertise & Services</h2>
       <section
         class="d-flex justify-content-flex-start content flex-row flex-wrap"
