--- a/purpose.html
+++ b/purpose.html
@@ -95,33 +95,33 @@
         </div>
 
         <div class="p-2">
-          <h3 class="sub-title my-3 mx-4">OUR VALUES</h3>
-          <div class="lead pl-5 pb-2">
-            <span class="pl-3 font-weight-bold">Excellence:</span> To provide
-            the best of our services and our partners to our customers.
+          <h3 class="sub-title my-3">OUR VALUES</h3>
+          <div class="pb-2 values">
+            <span class="font-weight-bold">Excellence:</span> To provide the
+            best of our services and our partners to our customers.
           </div>
-          <div class="lead pl-5 pb-2">
-            <span class="pl-3 font-weight-bold">Collaboration:</span> To
-            cooperate with clients in a way that promotes rapid development.
+          <div class="pb-2 values">
+            <span class="font-weight-bold">Collaboration:</span> To cooperate
+            with clients in a way that promotes rapid development.
           </div>
-          <div class="lead pl-5 pb-2">
-            <span class="pl-3 font-weight-bold">Inventive:</span> To think
-            beyond the box and propose new ideas and strategies that have never
-            been used before.
+          <div class="pb-2 values">
+            <span class="font-weight-bold">Inventive:</span> To think beyond the
+            box and propose new ideas and strategies that have never been used
+            before.
           </div>
-          <div class="lead pl-5 pb-2">
-            <span class="pl-3 font-weight-bold">Honesty:</span> To display our
+          <div class="pb-2 values">
+            <span class="font-weight-bold">Honesty:</span> To display our
             reliable, dependable, and credible partnership to our clients.
           </div>
-          <div class="lead pl-5 pb-2">
-            <span class="pl-3 font-weight-bold">Vision:</span> To envision your
-            dream in a new light and make your project a success.
+          <div class="pb-2 values">
+            <span class="font-weight-bold">Vision:</span> To envision your dream
+            in a new light and make your project a success.
           </div>
         </div>
         <div class="p-2">
-          <h3 class="sub-title my-3 mx-4">OUR PURPOSE</h3>
-          <div class="p-2">
-            <p class="lead pl-3">
+          <h3 class="sub-title my-3">OUR PURPOSE</h3>
+          <div>
+            <p class="lead">
               Our objective is to provide strategic marketing consulting and
               programming that assists our clients in building solid
               connections, raising awareness, educating potential consumers, and
